fix(UI): SD-1465 hidden overflow

--- a/src/app/pages/talent-match/public-talent-match/public-talent-match.component.scss
+++ b/src/app/pages/talent-match/public-talent-match/public-talent-match.component.scss
@@ -1,6 +1,7 @@
 .tm-page {
   background-color: #f5f6fa;
   min-height: 100vh;
+  overflow-x: hidden;
 
   .content-wrapper {
     width: 100%;
